@@ -605,6 +605,22 @@ AC_ARG_ENABLE(long-phy-address,
     ]
   )
 
+AC_MSG_CHECKING(for large ramfile support)
+AC_ARG_ENABLE(large-ramfile,
+  [  --enable-large-ramfile                     enable large ramfile support],
+  [if test "$enableval" = yes; then
+    AC_MSG_RESULT(yes)
+    AC_DEFINE(BX_LARGE_RAMFILE, 1)
+   else
+    AC_MSG_RESULT(no)
+    AC_DEFINE(BX_LARGE_RAMFILE, 0)
+   fi],
+  [
+    AC_MSG_RESULT(no)
+    AC_DEFINE(BX_LARGE_RAMFILE, 0)
+    ]
+  )
+AC_SUBST(BX_LARGE_RAMFILE)
 
 AC_CHECK_HEADER(zlib.h, [AC_CHECK_LIB(z, gzopen, AC_DEFINE(BX_HAVE_ZLIB,1))] )
 
